--- a/JS/<!DOCTYPE html>.html
+++ b/JS/<!DOCTYPE html>.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello!</h1>
     <p>Hello world</p>
     <script src="JS/script.js"></script>
     <!-- <script>alert(1)</script> -->
