--- a/JS/<!DOCTYPE html>.html
+++ b/JS/<!DOCTYPE html>.html
@@ -10,6 +10,7 @@
     <h2>Hi</h2>
     <h1>Hello!</h1>
     <p>Hello world</p>
+    <h3>sjfbkrsfb</h3>
     <script src="JS/script.js"></script>
     <!-- <script>alert(1)</script> -->
 </body>
